create test.img for bugfix of loader

--- a/arch/x86/boot/loader/Makefile
+++ b/arch/x86/boot/loader/Makefile
@@ -6,6 +6,8 @@ OBJ			=	loader.o
 MAP			= 	bootloader.map
 
 all: $(LOADER)
+	$(MAKE) $(LOADER)
+	cd test; $(MAKE) 
 
 $(LOADER): $(OBJ)
 	ld -T setup.ld $(OBJ) -o $(LOADER) --oformat binary -Map $(MAP)
@@ -14,8 +16,10 @@ $(OBJ): loader.S
 	clang --target=i686-elf -c loader.S -v -ggdb3
 
 run: $(LOADER)
-	qemu-system-i386 -fda $(LOADER) $(QEMUFLAGS)
-
+	cd test; $(MAKE)
+	cat $(LOADER) test/test.img > test.img
+	qemu-system-i386 -fda test.img $(QEMUFLAGS)
 
 clean:
-	rm -f $(LOADER) $(OBJ) $(MAP)
+	rm -f $(LOADER) $(OBJ) $(MAP) test.img
+	cd test; $(MAKE) clean
