--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -5,11 +5,12 @@ ARCHOBJS	:= $(ARCHPATH)/kernel/head.o
 OBJS		:= $(ARCHOBJS) main.o
 
 LDSCRIPT 	:= kernel.ld
+MAP			:= kernel.map
 
 all: $(IMAGE)
 
 $(IMAGE): $(OBJS)
-	$(LD) $(LDFLAGS) $(OBJS) -o $@ -T $(LDSCRIPT) -Map kernel.map
+	$(LD) $(LDFLAGS) $(OBJS) -o $@ -T $(LDSCRIPT) -Map $(MAP)
 
 .c.o: 
 	$(CC) $(CFLAGS) $< -c
@@ -19,4 +20,4 @@ $(ARCHOBJS):
 
 clean:
 	cd $(ARCHPATH)/kernel; $(MAKE) clean
-	rm -f $(IMAGE) $(OBJS)
+	rm -f $(IMAGE) $(OBJS) $(MAP)
