--- a/arch/x86/kernel/Makefile
+++ b/arch/x86/kernel/Makefile
@@ -1,10 +1,14 @@
-
-OBJS	:= head.o
+KERNEL = kernel.img
+OBJS	:= head.o main.o
 
 .S.o: 
 	$(CC) -Wall -I../include --target=i686-elf -m32 $< -c
 
-all: $(OBJS)
+all: $(KERNEL)
+
+$(KERNEL): $(OBJS)
+	
+
 	
 clean:
 	rm -f $(OBJS)
