--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,19 +1,23 @@
 IMAGE		:= kernel.img
+DEBUG_OBJ   := kernel.debug
 
 ARCHPATH	:= ../arch/$(ARCH)
-ARCHOBJS	:= #$(ARCHPATH)/kernel/
+ARCHOBJS	:= $(ARCHPATH)/kernel/head_32.o $(ARCHPATH)/kernel/setup.o 
 OBJS		:= $(ARCHOBJS) main.o
 
 LDSCRIPT 	:= kernel.ld
 MAP			:= kernel.map
 
-all: $(IMAGE)
+all: $(IMAGE) $(DEBUG_OBJ)
 
 $(IMAGE): $(OBJS) $(ARCHOBJS) $(LDSCRIPT)
 	$(LD) $(LDFLAGS) $(OBJS) -o $@ -T $(LDSCRIPT) 
 
+$(DEBUG_OBJ): $(OBJS) $(ARCHOBJS) $(LDSCRIPT)
+	$(LD) $(DEBUG_LDFLAGS) $(OBJS) -o $@ -T $(LDSCRIPT)
+
 .c.o: 
-	$(CC) $(CFLAGS) $< -c
+	$(CC) $(CFLAGS) -I ../include $< -c
 
 $(ARCHOBJS):
 	cd $(ARCHPATH)/kernel; $(MAKE)
