call start_kernel

--- a/arch/x86/kernel/Makefile
+++ b/arch/x86/kernel/Makefile
@@ -1,8 +1,10 @@
 #MM_OBJS := ../mm/distconfig.o
-OBJS	:= head_32.o setup.o $(MM_OBJS)
+OBJS	:= head_32.o setup.o init_task.o $(MM_OBJS)
 
 .S.o: 
 #      $(CC) -Wall -I../include --target=i686-elf -m32 $< -c
+	$(CC) $(CFLAGS) $< -c -I../include -I../../../include
+.c.o:
 	$(CC) $(CFLAGS) $< -c -I../include -I../../../include
 
 all: $(OBJS)
