--- a/init/Makefile
+++ b/init/Makefile
@@ -3,7 +3,12 @@ DEBUG_OBJ   := kernel.debug
 
 ARCHPATH	:= ../arch/$(ARCH)
 ARCHOBJS	:= $(ARCHPATH)/kernel/head_32.o $(ARCHPATH)/kernel/setup.o $(ARCHPATH)/kernel/init_task.o
-OBJS		:= $(ARCHOBJS) main.o
+
+MMPATH		:= ../mm
+MMOBJS		:= $(MMPATH)/bootmem.o
+
+OBJS		:= $(ARCHOBJS) main.o $(MMOBJS)
+
 
 LDSCRIPT 	:= kernel.ld
 MAP			:= kernel.map
@@ -12,6 +17,9 @@ all: $(IMAGE) $(DEBUG_OBJ)
 
 $(IMAGE): $(OBJS) $(ARCHOBJS) $(LDSCRIPT)
 	$(LD) $(LDFLAGS) $(OBJS) -o $@ -T $(LDSCRIPT) 
+
+$(MMOBJS): 
+	cd $(MMPATH); $(MAKE)
 
 $(DEBUG_OBJ): $(OBJS) $(ARCHOBJS) $(LDSCRIPT)
 	$(LD) $(DEBUG_LDFLAGS) $(OBJS) -o $@ -T $(LDSCRIPT)
