--- a/init/Makefile
+++ b/init/Makefile
@@ -2,13 +2,12 @@ IMAGE		:= kernel.img
 DEBUG_OBJ   := kernel.debug
 
 ARCHPATH	:= ../arch/$(ARCH)
-ARCHOBJS	:= $(ARCHPATH)/kernel/head_32.o $(ARCHPATH)/kernel/setup.o $(ARCHPATH)/kernel/init_task.o
+ARCHOBJS	:= $(ARCHPATH)/kernel/head_32.o $(ARCHPATH)/kernel/setup.o $(ARCHPATH)/kernel/init_task.o $(ARCHPATH)/mm/init.o $(ARCHPATH)/mm/distconfig.o
 
 MMPATH		:= ../mm
-MMOBJS		:= $(MMPATH)/bootmem.o
+MMOBJS		:= $(MMPATH)/bootmem.o memory.o page_alloc.o
 
 OBJS		:= $(ARCHOBJS) main.o $(MMOBJS)
-
 
 LDSCRIPT 	:= kernel.ld
 MAP			:= kernel.map
@@ -26,6 +25,8 @@ $(DEBUG_OBJ): $(OBJS) $(ARCHOBJS) $(LDSCRIPT)
 
 .c.o: 
 	$(CC) $(CFLAGS) -I ../include $< -c
+.S.o: 
+	$(CC) $(CFLAGS) -I../include -I../../../include $< -c
 
 $(ARCHOBJS):
 	cd $(ARCHPATH)/kernel; $(MAKE)
